# openenv

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_hf.py
data/: __init__.py  tasks.py
openenv_data_clean_env.egg-info/: PKG-INFO  SOURCES.txt
server/: __main__.py  app.py  data_clean_env_environment.py  graders.py
tests/: test_environment.py  test_graders.py
